skins/laika/src/scss/variables.scss
// Limit the design to 960 px
$widescreen-enabled: false;
$fullhd-enabled: false;

$fun-color-bright: #ffffff;
$fun-color-dark: #000000;
$fun-color-dark-lighter: rgba(0, 0, 0, 0.6);
$fun-color-primary: #0065a4;
$fun-color-primary-light: #1e88ca;
$fun-color-primary-lighter: #a5cee2;
$fun-color-primary-lightest: #dce4e8;
$fun-color-footer: #c7d1d8;
$fun-color-error: #812923;
$fun-color-error-light: #e6d4d3;
$fun-color-gray-dark: #808080;
$fun-color-gray-mid: #B7B7B7;
$fun-color-gray-light-solid: #E5E5E5;
$fun-color-gray-light-transparency: rgba(0, 0, 0, 0.14);
$fun-color-gray-very-light: rgba(0, 0, 0, 0.07);


// Used for selectors like ".has-background-primary"
$custom-colors: (
		"bright": ($fun-color-bright, $fun-color-dark),
		"dark": ($fun-color-dark, $fun-color-bright),
		"dark-lighter": ($fun-color-dark-lighter),
		"primary": ($fun-color-primary),
		"primary-light": ($fun-color-primary-light),
		"primary-lighter": ($fun-color-primary-lighter),
		"primary-lightest": ($fun-color-primary-lightest),
		"footer": ($fun-color-footer),
		"error": ($fun-color-error),
		"error-light": ($fun-color-error-light),
		"gray-dark": ($fun-color-gray-dark),
		"gray-mid": ($fun-color-gray-mid),
		"gray-light-solid": ($fun-color-gray-light-solid),
		"gray-light-transparency": ($fun-color-gray-light-transparency),
		"gray-very-light": ($fun-color-gray-very-light),
);

//
// Overriding Bulma variables
//

// General page / body
$primary: $fun-color-primary;
$body-background-color: $fun-color-primary-lightest;
$column-gap: 18px;
$radius: 2px;

// Text or font related
$size-1: 1.7rem;
$size-2: 1.6rem;
$size-3: 1.5rem;
$size-4: 1.4rem;
$size-5: 1.3rem;
$size-6: 1.2rem;
$size-7: 1.1rem;
$size-8: 1.0rem;

$input-color: $fun-color-dark-lighter;
$input-placeholder-color: rgba($fun-color-dark, 0.6);
$input-shadow: none;
$input-focus-border-color: $fun-color-primary;
$input-focus-box-shadow-color: $fun-color-primary;
$input-focus-box-shadow-size: 0 1px 0 0;

$input-disabled-color: $fun-color-dark-lighter;
$input-disabled-background-color: $fun-color-gray-light-solid;
$input-disabled-border-color: $fun-color-gray-mid;
$input-disabled-placeholder-color: $fun-color-dark-lighter;

$text: $fun-color-dark;
$family-primary: "Open Sans",Helvetica,Arial,sans-serif;
$body-size: 14px;
$body-line-height: 1.8;
$danger: $fun-color-error;
$warning: $fun-color-dark;

$title-color: $fun-color-dark;
$title-size: $size-1;
$title-weight: 400;
$subtitle-size: $size-8;
$subtitle-color: $fun-color-dark;
$subtitle-weight: bold;

// Header / Navbar
$navbar-height: 5.2rem;
$navbar-box-shadow-size: 1px 2px 3px;
$navbar-box-shadow-color: rgba(0, 0, 0, 0.1);
$navbar-item-color: $text;
$navbar-item-hover-color: $fun-color-primary;
$navbar-item-hover-background-color: $fun-color-bright;
$navbar-item-active-color: $fun-color-primary;
$navbar-item-active-background-color: $fun-color-bright;

$spacing-range-start: 0;
$spacing-range-end: 54;
$spacing-interval: 18;

